    (Gaurav Kanade via cnauroth)

    HADOOP-12334. Change Mode Of Copy Operation of HBase WAL Archiving to bypass
    Azure Storage Throttling after retries. (Gaurav Kanade via cnauroth)

    HADOOP-12049. Control http authentication cookie persistence via
    configuration. (hzlu via benoy)

    HADOOP-12551. Introduce FileNotFoundException for WASB FileSystem API
    (Dushyanth via cnauroth)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-11932. MetricsSinkAdapter may hang  when being stopped.
    (Brahma Reddy Battula via jianhe)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11872. "hadoop dfs" command prints message about using "yarn jar" on
    Windows(branch-2 only) (Varun Vasudev via cnauroth)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11959. WASB should configure client side socket timeout in storage
    client blob request options. (Ivan Mitic via cnauroth)

    HADOOP-11934. Use of JavaKeyStoreProvider in LdapGroupsMapping causes
    infinite loop. (Larry McCay via cnauroth)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.